Changes checked in

--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,19 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Admissions</title>
+		<link rel="stylesheet" type="text/css" href="css/styles.css" />
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">  		
 	</head>
+	
 	<body>
-		
-	<link rel="stylesheet" type="text/css" href="css/styles.css" media="screen" />
-		<script src="js/jquery-3.1.1.js" />
-		<script src="js/app.js" />
-		<script type="text/javascript">
-		</script>
-
-
-		<form action="" method="post">
+	
+		<form action="/submitRegistration" id="registrationForm" name="regnForm" method="POST">
 	    <fieldset>
 	        <legend>Student Application Form</legend>
 	        <div>
 	            <label for="admission">Admission needed for (required):</label>
-	            <select>
+	            <!-- TODO The following select needs to be loaded based on the School Id -->
+	            <select id="classAdmission">
 	              <option value="select">Select</option>
 				  <option value="Class7">Class 7</option>
 				  <option value="class8">Class 8</option>
@@ -29,37 +26,33 @@
 	        </div>
 	        <div>
 	            <label for="firstName">First Name (required):</label>
-	            <input type="text" id="firstName" name="firstName" value="" aria-describedby="name-format" maxlength="50">
+	            <input type="text" id="firstName" name="firstName" value="" aria-describedby="name-format" maxlength="50"/>
 	        </div>
 	        <div>
 	            <label for="middleName">Middle Name:</label>
-	            <input type="text" id="middleName" name="middleName" value="" aria-describedby="name-format" maxlength="50">
+	            <input type="text" id="middleName" name="middleName" value="" aria-describedby="name-format" maxlength="50"/>
 	        </div>
 	        <div>
 	            <label for="lastName">Last Name (required):</label>
-	            <input type="text" id="lastName" name="lastName" value="" aria-describedby="name-format" maxlength="50">
+	            <input type="text" id="lastName" name="lastName" value="" aria-describedby="name-format" maxlength="50"/>
 	        </div>
 	        <div>
 	            <label for="gender">Gender (required):</label>
-	            <div >
-	            	<input type="radio" id="genderM" name="gender" value="male" checked> Male
-		        </div>
-		        <div width="1px">
-		        	<input type="radio" id="genderF" name="gender" value="female"> Female
-		        </div>
+	            	<input type="radio" id="genderM" name="gender" value="male" checked/> Male
+	            	<input type="radio" id="genderF" name="gender" value="female"/> Female
 		    </div>
 	        <div>
 	            <label for="dob">Date of Birth (required):</label>
-	            <input type="text" id="dob" name="dob" value="" aria-describedby="name-format" maxlength="50">
+	            <input type="text" id="dob" name="dob" value="" aria-describedby="name-format" maxlength="50"/>
 	            <span id="name-format" class="help">Format: DD/MM/YYYY</span>
 	        </div>
 	        <div>
 	            <label for="nationality">Nationality:</label>
-	            <input type="text" id="nationality" name="nationality" value="" maxlength="50">
+	            <input type="text" id="nationality" name="nationality" value="" maxlength="50"/>
 	        </div>
 	        <div>
 	            <label for="category">Category:</label>
-	            <select>
+	            <select id="categorySelection">
 	              <option value="select">Select</option>
 	              <option value="general">General</option>
 				  <option value="sc">SC</option>
@@ -67,55 +60,85 @@
 				  <option value="obc">OBC</option>
 				  <option value="others">Others</option>
 				</select>
-				<input type="text" id="otherCategory" name="otherCategory" value="" maxlength="50">
+				<input type="text" style="display:none" id="category" name="category" value="" maxlength="50"/>
 	        </div>
 	        <div>
 	            <label for="addressLine1">Address Line 1:</label>
-	            <input type="text" id="addressLine1" name="addressLine1" value="" maxlength="50">
+	            <input type="text" id="addressLine1" name="addressLine1" value="" maxlength="50"/>
 	        </div>
 	        <div>
 	            <label for="addressLine2">Address Line 2:</label>
-	            <input type="text" id="addressLine2" name="addressLine2" value="" maxlength="50">
+	            <input type="text" id="addressLine2" name="addressLine2" value="" maxlength="50"/>
 	        </div>
 	        <div>
 	            <label for="city">City:</label>
-	            <input type="text" id="city" name="city" value="" maxlength="50">
+	            <input type="text" id="city" name="city" value="" maxlength="50"/>
 	        </div>
 	        <div>
 	            <label for="state">State:</label>
-	            <input type="text" id="state" name="state" value="" maxlength="50">
+	            <!--TODO Make this autosuggest -->
+	            <input type="text" id="state" name="state" value="" maxlength="50"/>
 	        </div>
 	        <div>
 	            <label for="postalCode">Postal Code:</label>
-	            <input type="text" id="postalCode" name="postalCode" value="" maxlength="6">
+	            <!--TODO Do we need to validate this ? -->
+	            <input type="text" id="postalCode" name="postalCode" value="" maxlength="6"/>
 	        </div>
 	        <div>
 	            <label for="phone">Phone:</label>
-	            <input type="text" id="phone" name="phone" value="" maxlength="20">
+	            <input type="text" id="phone" name="phone" value="" maxlength="20"/>
 	        </div>
 	        <div>
 	            <label for="mobile">Mobile:</label>
-	            <input type="text" id="mobile" name="mobile" value="" maxlength="10">
+	            <input type="text" id="mobile" name="mobile" value="" maxlength="10"/>
 	        </div>
 	        <div>
 	            <label for="email">Email (required):</label>
-	            <input type="text" id="email" name="email" value="" maxlength="100">
+	            <input type="text" id="email" name="email" value="" maxlength="100"/>
+	        </div>
+	        <div>
+	            <label for="confirmEmail">Confirm Email:</label>
+	            <input type="text" id="confirmEmail" name="confirmEmail" value="" maxlength="100"/>
 	        </div>
 	        <div>
 	            <label for="prevInstitution">Name of Previous school/crèche/nursery/pre-school:</label>
-	            <input type="text" id="prevInstitution" name="prevInstitution" value="" maxlength="100">
+	            <input type="text" id="prevInstitution" name="prevInstitution" value="" maxlength="100"/>
 	        </div>
 	        <div>
 	            <label for="percentage">Percentage marks secured in previous school:</label>
-	            <input type="text" id="percentage" name="percentage" value="" maxlength="4">
+	            <input type="text" id="percentage" name="percentage" value="" maxlength="4"/>
 	        </div>
-	        
-	        <div class="submit">
-	            <input type="submit" value="Submit">
+	        <div class="g-recaptcha" width="auto" data-sitekey="6Ldwaw4UAAAAAAB-gig19hhWAWv2dPH8TpALjyTy"></div>
+	        <div class="submitButton">
+	            <input type="submit" id="submitRegn" value='Submit' />
 	        </div>
 	    </fieldset>
 	</form>
-
-
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="js/jquery.validate.min.js"></script>
+		<script type="text/javascript" src="js/additional-methods.min.js"></script>
+		<script type="text/javascript" src="js/validations.js"></script>
+		<script src='https://www.google.com/recaptcha/api.js'></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
+  
+		<script type="text/javascript">
+			$( function() {
+				$( "#dob" ).datepicker({
+					dateFormat: "dd/mm/yy"
+				});
+			});
+		</script>
 	</body>
+	<!--
+	1. TODO Internationalization 
+	2. Get the Classes from the database, passing in the school id
+	3. Back button disable
+	4. Validations
+	6. actual table save
+	7. Remote or Local css/js files
+	8. Validation based on email id and phone number - Done
+	-->
 </http>
